# weav

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docs.html  index.html  pitch-deck.html
.github/workflows/: ci.yml
benchmarks/: Cargo.toml
benchmarks/benches/: benchmarks.rs
benchmarks/src/: lib.rs
docs/: ARCHITECTURE.md  feature-parity-research.md
docs/diagrams/: concurrency-model.mmd  context-query-pipeline.mmd  crate-dependency-graph.mmd  feature-flags.mmd  ingestion-pipeline.mmd  request-lifecycle.mmd  storage-architecture.mmd
examples/: context_query.py  quickstart.py  quickstart.ts
reports/: competitive-landscape-2026-03-21.md  v001-context-graph-audit-2026-03-08.md  v002-context-graph-audit-2026-03-08.md  v003-context-graph-audit-2026-03-08.md  v004-context-graph-audit-2026-03-08.md  v005-context-graph-audit-2026-03-08.md  v006-context-graph-audit-2026-03-08.md  v007-context-graph-audit-2026-03-08.md  v008-context-graph-audit-2026-03-08.md  v009-context-graph-audit-2026-03-08.md  v010-context-graph-audit-2026-03-09.md  v013-final-summary-2026-03-09.md
sdk/node/: package-lock.json  package.json  tsconfig.json
sdk/node/src/: client.ts  index.ts  types.ts
sdk/node/tests/: types.test.ts
sdk/python/: pyproject.toml
sdk/python/tests/: test_client.py
sdk/python/weav/: __init__.py  client.py  integrations.py  types.py
site/: docs.html  index.html
weav-auth/: Cargo.toml
weav-auth/src/: acl.rs  api_key.rs  classify.rs  identity.rs  lib.rs  password.rs
weav-cli/: Cargo.toml
weav-cli/src/: main.rs
weav-core/: Cargo.toml
weav-core/src/: bus.rs  config.rs  context.rs  error.rs  events.rs  lib.rs  schema.rs  scope.rs  shard.rs  types.rs
weav-extract/: Cargo.toml
weav-extract/src/: chunker.rs  document.rs  extractor.rs  lib.rs  llm_client.rs  pipeline.rs  types.rs
weav-graph/: Cargo.toml
weav-graph/src/: adjacency.rs  dedup.rs  lib.rs  properties.rs  text_index.rs  traversal.rs
weav-mcp/: Cargo.toml
weav-mcp/src/: lib.rs  main.rs  tools.rs
weav-persist/: Cargo.toml
weav-persist/src/: lib.rs  recovery.rs  snapshot.rs  wal.rs
weav-proto/: Cargo.toml  build.rs
weav-proto/proto/: weav.proto
weav-proto/src/: command.rs  lib.rs  resp3.rs
weav-query/: Cargo.toml
weav-query/src/: budget.rs  executor.rs  lib.rs  parser.rs  planner.rs
weav-server/: Cargo.toml
weav-server/src/: engine.rs  grpc_server.rs  http.rs  lib.rs  main.rs  metrics.rs  resp3_server.rs  tls.rs
weav-server/tests/: e2e.rs  integration.rs
weav-vector/: Cargo.toml
weav-vector/src/: index.rs  tokens.rs
