[package]
name = "weav-benchmarks"
version.workspace = true
edition.workspace = true

[dependencies]
weav-core = { path = "../weav-core" }
weav-graph = { path = "../weav-graph" }
weav-vector = { path = "../weav-vector" }
weav-query = { path = "../weav-query" }
weav-persist = { path = "../weav-persist" }
weav-server = { path = "../weav-server", default-features = false, features = ["vector"] }
criterion = { workspace = true }
compact_str = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
