[package]
name = "weav-auth"
version.workspace = true
edition.workspace = true

[dependencies]
weav-core = { path = "../weav-core" }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
glob-match = { workspace = true }

[dev-dependencies]
