[package]
name = "weav-core"
version.workspace = true
edition.workspace = true

[dependencies]
compact_str = { workspace = true }
crossbeam-channel = { workspace = true }
xxhash-rust = { workspace = true }
roaring = { workspace = true }
smallvec = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
bumpalo = { workspace = true }

[dev-dependencies]
