[package]
name = "weav-extract"
version.workspace = true
edition.workspace = true

[dependencies]
weav-core = { path = "../weav-core" }
weav-graph = { path = "../weav-graph" }

# LLM integration
llm = "1.3"
schemars = "1"

# Document parsing
pdf_oxide = "0.3"
zip = "2"
csv = "1.4"

# Text chunking
text-splitter = { version = "0.29", features = ["tiktoken-rs"] }
tiktoken-rs = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
compact_str = { workspace = true }

# Fuzzy matching
strsim = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }
