[package]
name = "weav-extract"
version.workspace = true
edition.workspace = true

[features]
default = ["pdf"]
pdf = ["dep:pdf_oxide", "dep:zip"]
llm-providers = ["dep:llm", "dep:schemars"]

[dependencies]
weav-core = { path = "../weav-core" }
weav-graph = { path = "../weav-graph" }

# LLM integration (optional)
llm = { version = "1.3", optional = true }
schemars = { version = "1", optional = true }

# Document parsing (pdf_oxide and zip are optional)
pdf_oxide = { version = "0.3", optional = true }
zip = { version = "2", optional = true }
csv = "1.4"

# Text chunking
text-splitter = { version = "0.29", features = ["tiktoken-rs"] }
tiktoken-rs = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
compact_str = { workspace = true }

# Fuzzy matching
strsim = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }
