[package]
name = "weav-persist"
version.workspace = true
edition.workspace = true

[dependencies]
weav-core = { path = "../weav-core" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crc32fast = { workspace = true }
