[package]
name = "weav-proto"
version.workspace = true
edition.workspace = true

[dependencies]
weav-core = { path = "../weav-core" }
weav-query = { path = "../weav-query" }
bytes = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
compact_str = { workspace = true }
