[package]
name = "weav-proto"
version.workspace = true
edition.workspace = true

[features]
default = ["grpc"]
grpc = ["dep:tonic", "dep:prost", "dep:tonic-build"]

[dependencies]
weav-core = { path = "../weav-core" }
weav-query = { path = "../weav-query", default-features = false }
bytes = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
compact_str = { workspace = true }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true, optional = true }
