[package]
name = "weav-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "weav-server"
path = "src/main.rs"

[dependencies]
weav-core = { path = "../weav-core" }
weav-graph = { path = "../weav-graph" }
weav-vector = { path = "../weav-vector" }
weav-query = { path = "../weav-query" }
weav-persist = { path = "../weav-persist" }
weav-proto = { path = "../weav-proto" }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
compact_str = { workspace = true }
tower = { workspace = true }
