[package]
name = "weav-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "weav-server"
path = "src/main.rs"

[dependencies]
weav-core = { path = "../weav-core" }
weav-graph = { path = "../weav-graph" }
weav-vector = { path = "../weav-vector" }
weav-query = { path = "../weav-query" }
weav-persist = { path = "../weav-persist" }
weav-proto = { path = "../weav-proto" }
weav-auth = { path = "../weav-auth" }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
compact_str = { workspace = true }
parking_lot = { workspace = true }
tower = { workspace = true }
futures = "0.3"
tonic = { workspace = true }
prost = { workspace = true }
prometheus = "0.13"
base64 = { workspace = true }
tokio-stream = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
